# satisfiability

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  configure.ac  evaluate.c  evaluate.h  helpers.c  helpers.h  lexer.c  lexer.h  main.c  parser.c  parser.h  prompt.c  prompt.h  satisfiability.sublime-project  satisfy.c  satisfy.h  symbols.c  symbols.h  token.c  token.h  treenode.c  treenode.h
src/: Makefile.am  evaluate.c  evaluate.h  helpers.c  helpers.h  internal.h  lexer.c  lexer.h  main.c  options.c  options.h  parser.c  parser.h  prompt.c  prompt.h  satisfy.c  satisfy.h  symbols.c  symbols.h  token.c  token.h  treenode.c  treenode.h
